# thinking-in-cpp

./: .gitignore  CMakeLists.txt  README.md
basic/RAII/: HeapObjectWrapper.cpp
basic/STL/practice/: GCPtr.h  MyGC.cpp  jjalloc.h  practice01.cpp  practice02.cpp  practice03.cpp  practice04.cpp  practice05.cpp  practice06.cpp  practice07.cpp  practice08.cpp  practice09.cpp  practice10.cpp  practice11.cpp
basic/advanced_syntax/: enum-intro.cpp  if-vs-switch.cpp  math.cpp  mathod-stack.cpp  overload_overload.cpp  overload_overload.h  pointer-method.cpp  tail_recursion.cpp  three-loop.cpp  union-vs-struct.cpp
basic/cast_api/: main.cpp
basic/diff_version_cpp/: auto_keyword.cpp  c11_since_keyword.cpp  c11_since_keyword.h  c17_attributes.cpp  c17_structured_binding.cpp  diff_version.cpp  initializer_list.cpp  initializer_list_json.cpp  range_based.cpp  stl.cpp  unique_ptr.cpp
basic/feat/: about_STL.cpp  about_casts.cpp  about_displacement.cpp  about_number_overflow.cpp  about_string.cpp  diff_c_cpp_array.cpp  diff_c_cpp_string.cpp
basic/gdb/: finish.c  gdb-debug-skill.md  gdb-nginx.md  gdb-tui.md  gdb多线程.md  gdb实战.md  gdb调试.md  hello_server.c  jump.c  step.c
basic/mmakefile/libshared/: Makefile  Makefile-02  Makefile-03  main.cpp  reply.cpp  reply.h
basic/oop/: Complex.cpp  Complex.h  Complex_demo.cpp  Shape.cpp  String.cpp  String.h  String_demo.cpp  io_copy.cpp
basic/pimpl/: v1_CSocketClient.cpp  v2_CSocketClient.cpp  v3_SocketClient.cpp  v3_SocketClient.h
basic/ptr/: auto_ptr.cpp  cpp_mem.cpp  memory_leak.cpp  ptr_intro.cpp  ref_intro.cpp  shared_ptr_intro.cpp  shared_ptr_intro_ref.cpp  unique_ptr_intro.cpp
basic/thread/: Linux-conc.md  atomic-value.cpp  c11mutex.cpp  conc.md  cond-var.cpp  cpp-diff-version-thread.md  cpp11_thread_id.cpp  custom-thread-cls.cpp  destroy_locked_mutex.cpp  makesurethreadgroup.cpp  mutex-vs-sharedmutex.cpp  std-thread-join.cpp  std-thread-proc.c  thread-get-id.c  thread-join.cpp  thread.md  thread杂项.md  windows-conc.md
basic/thread/c11-shared-mutex/: SharedMutex.cpp  SharedMutex.h
basic/thread/custom-thread/: Thread.cpp  Thread.h
basic/thread/t-mutex/: normal-mutex.cpp  semaphore-thread.cpp  test-two-lock.cpp
basic/thread/task-pool/: TaskPool.cpp  TaskPool.h  main.cpp
cpp20/: modules.md
cpp20/Coroutines/: README.md  action.md
cpp20/Coroutines/Asyncpp/: CMakeLists.txt
cpp20/Coroutines/BasicFileSystem/: CMakeLists.txt
cpp20/Coroutines/BasicThread/: CMakeLists.txt
cpp20/Coroutines/CoroutineHandle/: CMakeLists.txt
cpp20/Coroutines/FutureFileSystem/: CMakeLists.txt
cpp20/Coroutines/Generator/: CMakeLists.txt
cpp20/Coroutines/PromiseType/: CMakeLists.txt
cpp20/DataHandle/: CMakeLists.txt  README.md
cpp20/DataHandle/RangesDanglingCheck/src/: main.cpp
cpp20/DataHandle/RangesDanglingFailed/src/: main.cpp
cpp20/DataHandle/RangesDataSample/src/: main.cpp
cpp20/DataHandle/RangesIteratorSample/src/: main.cpp
cpp20/DataHandle/RangesSample/src/: main.cpp
cpp20/DataHandle/RangesSizeSample/src/: main.cpp
cpp20/DataHandle/STLSample/src/: main.cpp
cpp20/GlobalModuleFragment/: CMakeLists.txt
cpp20/GlobalModuleFragment/src/: h2.h  helloworld.cpp  helloworld.ixx  main.cpp
cpp20/ImageServer/: README.md
cpp20/ImageServer/src/: main.cpp
cpp20/ModuleGettingStarted/src/: helloworld.ixx
cpp20/ModuleInclude/: CMakeLists.txt
cpp20/ModuleInclude/src/: h1.h  helloworld.cpp  helloworld.ixx  main.cpp
cpp20/ModulePartition/: CMakeLists.txt
cpp20/ModulePartition/src/: helloworld.cpp  helloworld.ixx  helloworldA.cpp  helloworldA.ixx  helloworldB.cpp
cpp20/MultiModules/: CMakeLists.txt
cpp20/MultiModules/src/: bye.cpp  bye.ixx  helloworld.cpp  helloworld.ixx
cpp20/PrivateModuleFragment/src/: helloworld.ixx  main.cpp
cpp20/concepts/: README.md  action.md
cpp20/concepts/AtomicConstraints/: CMakeLists.txt
cpp20/concepts/BasicConcepts/: CMakeLists.txt
cpp20/concepts/Conjunctions/: CMakeLists.txt
cpp20/concepts/Disjunctions/: CMakeLists.txt
cpp20/concepts/NumCpp/: CMakeLists.txt
cpp20/concepts/RequiresClauses/: CMakeLists.txt
cpp20/concepts/RequiresExpressions/: CMakeLists.txt
cpp20/genericity/: README.md
cpp20/genericity/BasicTemplate/: CMakeLists.txt
cpp20/genericity/ErrorMessage/: CMakeLists.txt
cpp20/genericity/ParamterPack/: CMakeLists.txt
cpp20/genericity/Specializations/: CMakeLists.txt
cpp20/genericity/TypeTraits/: CMakeLists.txt
cpp20/module/ImageServer/: CMakeLists.txt  README.md
cpp20/module/ModuleGettingStarted/: CMakeLists.txt
cpp20/module/ModuleInclude/: CMakeLists.txt
cpp20/module/PrivateModuleFragment/: CMakeLists.txt
cpp20/module/modulev1/: CMakeLists.txt
cpp20/module/modulev1/src/includev3/: add.cpp  add.h
cpp20/modules/: modules.md
cpp20/modulev1/: CMakeLists.txt
design-patterns/adapter/: main.cpp
design-patterns/observer/: Observer.h  Observerable.cpp  Observerable.h  main.cpp
design-patterns/singleton/: Singleton.cpp  Singleton.h  main.cpp
genericity/genericity_max/: main.cpp
genericity/genericity_sum/: main.cpp
network/: 网络通信效率.md
network/api/: redis-code.md  相关协议.md  网络工具.md  网络程序.md  网络编程.md  网络通信效率.md
network/api/cpp-tcp/: blocking_client.cpp  blocking_client_recv.cpp  blocking_server.cpp  client.cpp  epoll_server.cpp  epoll_server_with_oneshot.cpp  linux_ioctl.cpp  linux_nonblocking_connect.cpp  linux_nonblocking_connect_poll.cpp  nonblocking_client.cpp  nonblocking_client_recv.cpp  nonblocking_client_send_zero_bytes.cpp  nonblocking_connect.cpp  poll_server.cpp  select_client_tv0.cpp  select_client_tvnull.cpp  select_server.cpp  server.cpp  server_recv_zero_bytes.cpp
network/api/curl-client/: CurlClient.cpp  CurlClient.h
network/api/dns/: getaddrinfo_dns.cpp  resolution_dns.cpp
network/api/protocol/: ProtocolStream.cpp  ProtocolStream.h
network/api/smtp-socket/: MailMonitor.cpp  MailMonitor.h  SmtpSocket.cpp  SmtpSocket.h  main.cpp
network/api/timer/: Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h
network/tcp/helloworld/: common.h  helloworld1.cpp  helloworld1.h  helloworld2.cpp  (+5 more)
playground/voidstar/: main.cpp
(+76 files in other folders)
